# Hilbert_Curve_Mapping

./: README.md
HilbertCurve/: CMakeLists.txt  Output.txt  README.md
HilbertCurve/include/: dist.h  hilbert_curve.h  mesh.h  structs.h  torus.h  torus_donut.h
HilbertCurve/src/: main.cpp
HilbertCurve/src/plot/: index.html  index.js  style.css
HilbertCurve/test_files/: cg_D_256.csv  cg_S_16.csv  dt_S_16.csv  ep_D_256.csv  ep_S_16.csv  lu_D_256.csv  lu_S_16.csv  mg_D_256.csv  mg_S_16.csv  miniAero_128.csv  miniAero_32.csv  miniAero_4.csv  miniAero_512.csv  sp_D_256.csv  sp_S_16.csv  xhpcg_128.csv  xhpcg_16.csv  xhpcg_512.csv  xhpl_128.csv  xhpl_16.csv  xhpl_512.csv
